--- a/index.html
+++ b/index.html
@@ -1411,7 +1411,7 @@
             <section class="section glass">
                 <div class="profile-header">
                     <div class="profile-image-main">
-                        <img src="profile-photo.jpg" alt="SubbaReddy AV">
+                        <img src="images/profile-photo.jpg" alt="SubbaReddy AV">
                     </div>
                     <div class="profile-info">
                         <h1 class="profile-name">SubbaReddy AV</h1>
